<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context=".ui.fragments.SecurityLogFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarSecurityLog"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        android:elevation="4dp"
        app:title="@string/title_security_log"
        app:titleTextColor="?attr/colorOnSurface"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationContentDescription="@string/navigate_up"
        app:navigationIconTint="?attr/colorOnSurface"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/security_log_menu" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/securityLogRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/toolbarSecurityLog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_security_log"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/tvLogEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_log_is_empty"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="?android:attr/textColorSecondary"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_security_log_large"
        app:drawableTint="?android:attr/textColorSecondary"
        android:drawablePadding="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/toolbarSecurityLog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout> 